Aufgabe 1.4 angefangen, erfolglos.

--- a/cg-a01.1-canvas/index.html
+++ b/cg-a01.1-canvas/index.html
@@ -42,8 +42,30 @@
 		<button id="btnNewCircle" type="button"   >New Circle</button>
 		<button id="btnNewPoint" type="button">	   New Point</button>
         <!-- add more here... -->
+		
+		<form name="Formular" action="index.html"  method="post" >
+			
+			Breite:
+			<label>
+				<input type="text" id="width" size="25" maxlength="30">
+			</label>
+			<br>
+			Farbe:
+			<label>
+				<input type="text" id="color" size="25" maxlength="30">
+			</label>
+			<br>
+			Radius:	
+			<label>
+				<input type="text" id="radius" size="25" maxlength="30">
+			</label>
+			<br>
+			<input type="submit" id="submit" value="Änderung anwenden.">
+			
+		</form>
 
     </div>
+	
 
 
     <div style="float:clear;">
