changed input fields to color, number

--- a/cg-a01.1-canvas/index.html
+++ b/cg-a01.1-canvas/index.html
@@ -47,17 +47,17 @@
 			
 			Breite:
 			<label>
-				<input type="text" id="width" size="25" maxlength="30">
+				<input type="number" id="width" size="25" maxlength="30">
 			</label>
 			<br>
 			Farbe:
 			<label>
-				<input type="text" id="color" size="25" maxlength="30">
+				<input type="color" id="color" size="25" maxlength="30">
 			</label>
 			<br>
 			Radius:	
 			<label>
-				<input type="text" id="radius" size="25" maxlength="30">
+				<input type="number" id="radius" size="25" maxlength="30">
 			</label>
 			<br>
 			<input type="submit" id="submit" value="Änderung anwenden.">
