Aufgabe1 1.Teil gelöst

--- a/cg-a01.1-canvas/index.html
+++ b/cg-a01.1-canvas/index.html
@@ -43,26 +43,26 @@
 		<button id="btnNewPoint" type="button">	   New Point</button>
         <!-- add more here... -->
 		
-		<form name="Formular" action="index.html"  method="post" >
-			
-			Breite:
-			<label>
-				<input type="number" id="width" size="25" maxlength="30">
-			</label>
+			<br>
+			<div id="divWidth">
+				Breite:
+				<label>
+					<input type="number" id="width" min="1" max="11" size="25" maxlength="30">
+				</label>
+			</div>
 			<br>
 			Farbe:
 			<label>
 				<input type="color" id="color" size="25" maxlength="30">
 			</label>
 			<br>
-			Radius:	
-			<label>
-				<input type="number" id="radius" size="25" maxlength="30">
-			</label>
-			<br>
-			<input type="submit" id="submit" value="Änderung anwenden.">
-			
-		</form>
+			<div id="divRadius">
+				Radius:	
+				<label>
+					<input type="number" id="radius" size="25" maxlength="30">
+				</label>
+			</div>
+		
 
     </div>
 	
