--- a/cg-a01.1-canvas/index.html
+++ b/cg-a01.1-canvas/index.html
@@ -47,7 +47,7 @@
 			<div id="divWidth">
 				Breite:
 				<label>
-					<input type="number" id="width" min="1" max="11" size="25" maxlength="30">
+					<input type="range" id="width" min="1" max="11" size="25" maxlength="30">
 				</label>
 			</div>
 			<br>
