Aufgabe 1.2 wieder angefangen

--- a/cg-a01.1-canvas/index.html
+++ b/cg-a01.1-canvas/index.html
@@ -67,8 +67,18 @@
 					</label>
 				<output name="amount" for="radius"></output>
 				 	</form>
-
 			</div>
+			
+			
+		<button id="btnNewPointList" type="button">New PointList</button>
+		<label>
+			<input type="number" id="kdTreeNumbers" value="5" size="25" maxlength="30">
+		</label>
+		<button id="btnBuildKdTree" type="button">Build KdTree</button>
+		<button id="btnQueryKdTree" type="button">Query KdTree</button>
+		<input id="visKdTree" type="checkbox">show Tree</input>
+		
+			
 		
 
     </div>
