--- a/Ue_2/cg-a02.1-surfaces/index.html
+++ b/Ue_2/cg-a02.1-surfaces/index.html
@@ -62,7 +62,45 @@
             <tr>
                 <td><button id="btnNewBand"   type="button"   >Create Band</button></td>
             </tr>
+			
         </table>
+		<table id="parametric">
+			<tr>
+                <td>x:</td>
+                <td><input id="x" class="objParam" type="String"  value="u">
+            </tr>
+			<tr>
+                <td>y:</td>
+                <td><input id="y" class="objParam" type="String"  value="v">
+            </tr>
+			<tr>
+                <td>z:</td>
+                <td><input id="z" class="objParam" type="String" value="(1/3)*Math.pow(u,3) + (1/2)*Math.pow(v,2)">
+            </tr>
+			<tr>
+                <td>Number of Segments:</td>
+                <td><input id="numSegmentsPara" class="objParam" type="number" min="1" max="10000" value="1000">
+            </tr>
+			<tr>
+                <td>u min:</td>
+                <td><input id="numUmin" class="objParam" type="number"  max="10000" value="-2">
+            </tr>
+			<tr>
+                <td>u max:</td>
+                <td><input id="numUmax" class="objParam" type="number"  max="10000" value="2">
+            </tr>
+			<tr>
+                <td>v min:</td>
+                <td><input id="numVmin" class="objParam" type="number"  max="10000" value="-2">
+            </tr>
+			<tr>
+                <td>v max</td>
+                <td><input id="numVmax" class="objParam" type="number"  max="10000" value="2">
+            </tr>
+			<tr> 
+				<td><button id="btnNewParametric" type="button">Create Parametric</button></td>
+			</tr>
+		</table>
 
     </div>
 
