--- a/Ue_2/cg-a02.1-surfaces/index.html
+++ b/Ue_2/cg-a02.1-surfaces/index.html
@@ -60,26 +60,27 @@
                 <td><input id="height" class="objParam" type="number" min="1" max="1000" value="100">
             </tr>
             <tr>
-                <td><button id="btnNewBand"   type="button"   >Create Band</button></td>
+                <td><button id="btnNewBand"   type="button">Create Band</button></td>
             </tr>
 			
         </table>
 		<table id="parametric">
 			<tr>
                 <td>x:</td>
-                <td><input id="x" class="objParam" type="String"  value="u">
+              <td><input id="x" class="objParam" type="String"  value="u*150">
+               
             </tr>
 			<tr>
                 <td>y:</td>
-                <td><input id="y" class="objParam" type="String"  value="v">
+              <td><input id="y" class="objParam" type="String"  value="v*150">
             </tr>
 			<tr>
                 <td>z:</td>
-                <td><input id="z" class="objParam" type="String" value="(1/3)*Math.pow(u,3) + (1/2)*Math.pow(v,2)">
+                <td><input id="z" class="objParam" type="String" value="((1/3)*Math.pow(u,3) + (1/2)*Math.pow(v,2))*150">
             </tr>
 			<tr>
                 <td>Number of Segments:</td>
-                <td><input id="numSegmentsPara" class="objParam" type="number" min="1" max="10000" value="1000">
+                <td><input id="numSegmentsPara" class="objParam" type="number" min="1" max="10000" value="50">
             </tr>
 			<tr>
                 <td>u min:</td>
@@ -98,8 +99,15 @@
                 <td><input id="numVmax" class="objParam" type="number"  max="10000" value="2">
             </tr>
 			<tr> 
-				<td><button id="btnNewParametric" type="button">Create Parametric</button></td>
+				<td>Rotation</td>
+				<td><input id="CheckBoxRotation" type="checkbox"> </input></td>
 			</tr>
+			<tr> 
+				<td><button id="btnNewParametric" type="button">Create Parametric 1</button></td>
+				<td><button id="btnNewParametric2" type="button">Create Parametric 2</button></td>
+				<td><button id="btnNewParametric3" type="button">Create Parametric 3</button></td>
+			</tr>
+			
 		</table>
 
     </div>
