--- a/Ue_2/test.html
+++ b/Ue_2/test.html
@@ -19,12 +19,17 @@
 			 var cube = new THREE.Mesh( geometry, material ); 
 				
 			scene.add( cube );
-			camera.position.z = 20; var render = function () {
+			camera.position.z = 20; 
+			var x=0;
+			var render = function () {
 				requestAnimationFrame( render ); 
 				cube.rotation.x += 0.01; 
 				cube.rotation.y += 0.01; 
 				cube.rotation.z += 0.01;
+				x++;
+				if(x<=100)
 				renderer.render(scene, camera); 
+				
 			}; 
 		 render(); 
 		</script> 
