--- a/Ue_2/cg-a02.1-surfaces/index.html
+++ b/Ue_2/cg-a02.1-surfaces/index.html
@@ -6,6 +6,7 @@
      *
      * JavaScript / WebGL teaching framwork
      * (C)opyright Kristian Hildebrand, khildebrand@beuth-hochschule.de
+	 * changes by Benjamin Bleckmann, Josef Strunk
     -->
 
     <title>CG2 A2: WebGL / Surfaces</title>
@@ -65,24 +66,24 @@
 			
         </table>
 		   <table id="ellipsoid">
-            <tr>
-                <td><button id="btnNewEllipsoid"   type="button">Create Ellipsoid</button></td>
-            </tr>
 			 <tr>
                 <td>Konstante a:</td>
                 <td><input id="constA" class="objParam" type="number" min="1" max="1000" value="2">
             </tr>
 			 <tr>
                 <td>Konstante b:</td>
-                <td><input id="constB" class="objParam" type="number" min="1" max="1000" value="3">
+                <td><input id="constB" class="objParam" type="number" min="1" max="1000" value="1">
             </tr>
 			 <tr>
                 <td>Konstante c:</td>
-                <td><input id="constC" class="objParam" type="number" min="1" max="1000" value="4">
+                <td><input id="constC" class="objParam" type="number" min="1" max="1000" value="2">
             </tr>
 			 <tr>
                 <td>Segmente:</td>
-                <td><input id="numSegmentsEllipsoid" class="objParam" type="number" min="1" max="1000" value="100">
+                <td><input id="numSegmentsEllipsoid" class="objParam" type="number" min="1" max="1000" value="50">
+            </tr>
+			<tr>
+                <td><button id="btnNewEllipsoid"   type="button">Create Ellipsoid</button></td>
             </tr>
 			
         </table>
