--- a/Ue_2/cg-a02.1-surfaces/index.html
+++ b/Ue_2/cg-a02.1-surfaces/index.html
@@ -38,6 +38,10 @@
 
         <!-- add more here... -->
         <h3>Selected Object:</h3>
+        <input id="CheckBoxWireframe" type="checkbox">Wireframe</input>
+        <input id="CheckBoxSolid" type="checkbox">Solid</input>
+        <input id="CheckBoxPoints" type="checkbox">Points</input>
+        
         <table id="random">
             <tr>
                 <td>Number of Items:</td>
