--- a/Ue_2/cg-a02.1-surfaces/index.html
+++ b/Ue_2/cg-a02.1-surfaces/index.html
@@ -30,6 +30,7 @@
       <div id="drawing_container" width="600" height="400"></div>
 
     <div id="param_area" >
+				Robot:    <button id="newRobot" type="button">Create Robot</button>
 
         <button id="btnRandom"   type="button"   >Random</button>
         <button id="btnBand" type="button"   >Band</button>
@@ -172,14 +173,13 @@
 				
 			</tr>
 			<tr> 
-				<td><button id="btnNewParametric" type="button">Create Parametric 1</button></td>
-				<td><button id="btnNewParametric2" type="button">Create Parametric 2</button></td>
-				<td><button id="btnNewParametric3" type="button">Create Parametric 3</button></td>
+				<td><button id="btnNewParametric" type="button">Create Parametric Surface</button></td>
+				<td><button id="btnNewParametric2" type="button">Create Pyramide</button></td>
+				<td><button id="btnNewParametric3" type="button">Create Torus</button></td>
 			</tr>
 			
 		</table>
 		Rotation: <input id="CheckBoxRotation" type="checkbox"> </input>
-
 
     </div>
 
