--- a/Ue_2/cg-a02.1-surfaces/index.html
+++ b/Ue_2/cg-a02.1-surfaces/index.html
@@ -30,7 +30,11 @@
       <div id="drawing_container" width="1000" height="600"></div>
 
     <div id="param_area" >
-				Robot:    <button id="newRobot" type="button">Create Robot</button>
+				Robot:	<button id="newRobot" type="button">Create Robot</button>
+				Animate <br>
+						<input id="CheckBoxAnimateLegs" type="checkbox">Legs</input><br>
+						<input id="CheckBoxClaws" type="checkbox">Claws</input><br>
+						<input id="CheckBoxTail" type="checkbox">Tail</input><br>
 
         <button id="btnRandom"   type="button"   >Random</button>
         <button id="btnBand" type="button"   >Band</button>
