--- a/Ue_2/cg-a02.1-surfaces/index.html
+++ b/Ue_2/cg-a02.1-surfaces/index.html
@@ -32,7 +32,7 @@
     <div id="param_area" >
 				Robot:	<button id="newRobot" type="button">Create Robot</button>
 				Animate <br>
-						<input id="CheckBoxAnimateLegs" type="checkbox">Legs</input><br>
+						<input id="CheckBoxAnimateLegs" type="checkbox">Run</input><br>
 						<input id="CheckBoxClaws" type="checkbox">Claws</input><br>
 						<input id="CheckBoxTail" type="checkbox">Tail</input><br>
 
