--- a/Ue_2/cg-a02.1-surfaces/index.html
+++ b/Ue_2/cg-a02.1-surfaces/index.html
@@ -34,7 +34,7 @@
 				Animate <br>
 						<input id="CheckBoxAnimateLegs" type="checkbox">Run</input><br>
 						<input id="CheckBoxClaws" type="checkbox">Claws</input><br>
-						<input id="CheckBoxTail" type="checkbox">Tail</input><br>
+						<input id="CheckBoxAnimateTail" type="checkbox">Tail</input><br>
 
         <button id="btnRandom"   type="button"   >Random</button>
         <button id="btnBand" type="button"   >Band</button>
