--- a/Ue_2/cg-a02.1-surfaces/index.html
+++ b/Ue_2/cg-a02.1-surfaces/index.html
@@ -33,7 +33,7 @@
 				Robot:	<button id="newRobot" type="button">Create Robot</button>
 				Animate <br>
 						<input id="CheckBoxAnimateLegs" type="checkbox">Run</input><br>
-						<input id="CheckBoxClaws" type="checkbox">Claws</input><br>
+						<input id="CheckBoxAnimateClaws" type="checkbox">Claws</input><br>
 						<input id="CheckBoxAnimateTail" type="checkbox">Tail</input><br>
 
         <button id="btnRandom"   type="button"   >Random</button>
