+jump animation, +clear run

--- a/Ue_2/cg-a02.1-surfaces/index.html
+++ b/Ue_2/cg-a02.1-surfaces/index.html
@@ -35,6 +35,10 @@
 						<input id="CheckBoxAnimateLegs" type="checkbox">Run</input><br>
 						<input id="CheckBoxAnimateClaws" type="checkbox">Claws</input><br>
 						<input id="CheckBoxAnimateTail" type="checkbox">Tail</input><br>
+						<input id="CheckBoxAnimateJump" type="checkbox">Jump</input><br>
+						<button id="BtnClearAll" type="button">Clear All</button><br><br>
+						<br>
+						<br>
 
         <button id="btnRandom"   type="button"   >Random</button>
         <button id="btnBand" type="button"   >Band</button>
