fixed clearRun btn

--- a/Ue_2/cg-a02.1-surfaces/index.html
+++ b/Ue_2/cg-a02.1-surfaces/index.html
@@ -36,7 +36,7 @@
 						<input id="CheckBoxAnimateClaws" type="checkbox">Claws</input><br>
 						<input id="CheckBoxAnimateTail" type="checkbox">Tail</input><br>
 						<input id="CheckBoxAnimateJump" type="checkbox">Jump</input><br>
-						<button id="BtnClearAll" type="button">Clear All</button><br><br>
+						<button id="BtnClearRun" type="button">Clear Run</button><br><br>
 						<br>
 						<br>
 
