+shooting animation, + parasurfaces, +doc

--- a/Ue_2/cg-a02.1-surfaces/index.html
+++ b/Ue_2/cg-a02.1-surfaces/index.html
@@ -36,6 +36,7 @@
 						<input id="CheckBoxAnimateClaws" type="checkbox">Claws</input><br>
 						<input id="CheckBoxAnimateTail" type="checkbox">Tail</input><br>
 						<input id="CheckBoxAnimateJump" type="checkbox">Jump</input><br>
+						<input id="CheckBoxAnimateShot" type="checkbox">Shot</input><br>
 						<button id="BtnClearRun" type="button">Clear Run</button><br><br>
 						<br>
 						<br>
