bissl wat geschafft

--- a/UE_3/cg-3/index.html
+++ b/UE_3/cg-3/index.html
@@ -220,6 +220,24 @@
             </tr>
         </table>
 		
+		 <table id="explosion">
+			<tr>
+                <td>Frequency Scale:</td>
+                <td><input id="frequencyScale" class="objParam" type="number" >
+            </tr>
+			<tr>
+                <td>Color Scale:</td>
+                <td><input id="colorScale" class="objParam" type="number">
+            </tr>
+			<tr>
+                <td>Weight</td>
+                <td><input id="weight" class="objParam" type="number">
+            </tr>
+			<tr>
+                <td><button id="btnNewExplosion"   type="button">Create Explosions</button></td>
+            </tr>
+        </table>
+		
 		Rotation: <input id="CheckBoxRotation" type="checkbox"> </input>
 
     </div>
