texture wird angezeigt

--- a/UE_3/cg-a03.1-shaders/index.html
+++ b/UE_3/cg-a03.1-shaders/index.html
@@ -30,22 +30,13 @@
       <div id="drawing_container" width="1000" height="600"></div>
 
     <div id="param_area" >
-				Robot:	<button id="newRobot" type="button">Create Robot</button>
-				Animate <br>
-						<input id="CheckBoxAnimateRun" type="checkbox">Run</input><br>
-						<input id="CheckBoxAnimateClaws" type="checkbox">Claws</input><br>
-						<input id="CheckBoxAnimateTail" type="checkbox">Tail</input><br>
-						<input id="CheckBoxAnimateJump" type="checkbox">Jump</input><br>
-						<input id="CheckBoxAnimateShot" type="checkbox">Shot</input><br>
-						<button id="BtnClearRun" type="button">Clear Run</button><br><br>
-						<br>
-						<br>
-
+	
         <button id="btnRandom"   type="button"   >Random</button>
         <button id="btnBand" type="button"   >Band</button>
         <button id="btnEllipsoid" type="button"   >Ellipsoid</button>
         <button id="btnParametric" type="button"   >Parametric</button>
-        <button id="btnPlanet" type="button"   >Planet</button>
+        <button id="btnRobot" type="button"   >Robot</button>
+		<button id="btnPlanet" type="button"   >Planet</button>
         <button id="btnExplosion" type="button"   >Explosion</button>
 		
 		
@@ -219,6 +210,22 @@
                 <td><button id="btnNewPlanet"   type="button">Create Planet</button></td>
             </tr>
         </table>
+		
+		<div id="robot_div">
+				Robot:
+				<button id="newRobot" type="button">Create Robot</button>
+				Animate:
+				<br>
+						<input id="CheckBoxAnimateRun" type="checkbox">Run</input><br>
+						<input id="CheckBoxAnimateClaws" type="checkbox">Claws</input><br>
+						<input id="CheckBoxAnimateTail" type="checkbox">Tail</input><br>
+						<input id="CheckBoxAnimateJump" type="checkbox">Jump</input><br>
+						<input id="CheckBoxAnimateShot" type="checkbox">Shot</input><br>
+						<button id="BtnClearRun" type="button">Clear Run</button><br><br>
+						
+						<br>
+						<br>
+		</div>
 		
 		 <table id="explosion">
 			<tr>
