aufgabe 3 erde + explosion fertig

--- a/UE_3/cg-a03.1-shaders/index.html
+++ b/UE_3/cg-a03.1-shaders/index.html
@@ -243,6 +243,10 @@
 			<tr>
                 <td><button id="btnNewExplosion"   type="button">Create Explosions</button></td>
             </tr>
+			<tr>
+				<td>Explosion animieren:</td>
+				<td><input id="CheckBoxAnimateExplosion" type="checkbox"></input></td>
+			</tr>
         </table>
 		
 		Rotation: <input id="CheckBoxRotation" type="checkbox"> </input>
