--- a/UE_3/cg-a03.1-shaders/index.html
+++ b/UE_3/cg-a03.1-shaders/index.html
@@ -209,6 +209,9 @@
 			<tr>
                 <td><button id="btnNewPlanet"   type="button">Create Planet</button></td>
             </tr>
+            <tr>
+            	<td>Rotation: <input id="CheckBoxRotate" type="checkbox"></input></td>
+            </tr>
         </table>
 		
 		<div id="robot_div">
@@ -230,15 +233,15 @@
 		 <table id="explosion">
 			<tr>
                 <td>Frequency Scale:</td>
-                <td><input id="frequencyScale" class="objParam" type="number" >
+                <td><input id="frequencyScaleExplotion" class="objParam" type="number" >
             </tr>
 			<tr>
                 <td>Color Scale:</td>
-                <td><input id="colorScale" class="objParam" type="number">
+                <td><input id="colorScaleExplotion" class="objParam" type="number">
             </tr>
 			<tr>
                 <td>Weight</td>
-                <td><input id="weight" class="objParam" type="number">
+                <td><input id="weightExplosion" class="objParam" type="number">
             </tr>
 			<tr>
                 <td><button id="btnNewExplosion"   type="button">Create Explosions</button></td>
@@ -248,8 +251,6 @@
 				<td><input id="CheckBoxAnimateExplosion" type="checkbox"></input></td>
 			</tr>
         </table>
-		
-		Rotation: <input id="CheckBoxRotation" type="checkbox"> </input>
 
     </div>
 
